tests/tagged_enum_old_payload_syntax_bad.hop
// Verifies old inline enum payload declaration syntax is rejected.
enum Token u8 {
    Int{
        value i32
    }
}

fn main() {}
